--- a/brute-force-attacks-and-fail2ban/index.html
+++ b/brute-force-attacks-and-fail2ban/index.html
@@ -130,7 +130,7 @@ Dec 11 03:23:44 ____ postfix/smtpd[12735]: warning: hostname kursejifjalet.com d
     // make sure to use the post.id as an identifier, 
     //otherwise disqus will use the pages url per default, 
     //which might be problematic...
-    var disqus_identifier = '19,';
+    var disqus_identifier = '19';
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
 
