--- a/deploying-anchor-cms-on-openshift/index.html
+++ b/deploying-anchor-cms-on-openshift/index.html
@@ -300,7 +300,7 @@ ln -sf <span class="nv">$OPENSHIFT_DATA_DIR</span>/content <span class="nv">$OPE
     // make sure to use the post.id as an identifier, 
     //otherwise disqus will use the pages url per default, 
     //which might be problematic...
-    var disqus_identifier = '16,';
+    var disqus_identifier = '16';
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
 
