--- a/fix-hombrew-on-os-x-yosemite/index.html
+++ b/fix-hombrew-on-os-x-yosemite/index.html
@@ -118,7 +118,7 @@ And the same must be required for <code>/usr/local/Library/ENV/4.3/xcrun</code>,
     // make sure to use the post.id as an identifier, 
     //otherwise disqus will use the pages url per default, 
     //which might be problematic...
-    var disqus_identifier = '32,';
+    var disqus_identifier = '32';
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
 
