--- a/fixing-wifi-on-os-x-by-tweaking-the-mtu/index.html
+++ b/fixing-wifi-on-os-x-by-tweaking-the-mtu/index.html
@@ -128,7 +128,7 @@ ping: sendto: Message too long
     // make sure to use the post.id as an identifier, 
     //otherwise disqus will use the pages url per default, 
     //which might be problematic...
-    var disqus_identifier = '36,';
+    var disqus_identifier = '36';
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
 
