--- a/ghiostseven/index.html
+++ b/ghiostseven/index.html
@@ -104,7 +104,7 @@ Thanks to <a href="http://theonlycog.com">David</a> this is now fixed.</p>
     // make sure to use the post.id as an identifier, 
     //otherwise disqus will use the pages url per default, 
     //which might be problematic...
-    var disqus_identifier = '7,';
+    var disqus_identifier = '7';
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
 
