--- a/ghost-on-amazon-ec2-without-using-sudo/index.html
+++ b/ghost-on-amazon-ec2-without-using-sudo/index.html
@@ -164,7 +164,7 @@ sudo chgrp yourusergroup -R *
     // make sure to use the post.id as an identifier, 
     //otherwise disqus will use the pages url per default, 
     //which might be problematic...
-    var disqus_identifier = '3,';
+    var disqus_identifier = '3';
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
 
