--- a/git-workflow-for-lazy-mathematicians/index.html
+++ b/git-workflow-for-lazy-mathematicians/index.html
@@ -350,7 +350,7 @@ At each step you've created a new version in git, but now you decide that you di
     // make sure to use the post.id as an identifier, 
     //otherwise disqus will use the pages url per default, 
     //which might be problematic...
-    var disqus_identifier = '11,';
+    var disqus_identifier = '11';
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
 
