--- a/installing-scientific-python-3-libraries-on-osx-and-julia-with-ijulia/index.html
+++ b/installing-scientific-python-3-libraries-on-osx-and-julia-with-ijulia/index.html
@@ -162,7 +162,7 @@ brew install --64bit julia
     // make sure to use the post.id as an identifier, 
     //otherwise disqus will use the pages url per default, 
     //which might be problematic...
-    var disqus_identifier = '29,';
+    var disqus_identifier = '29';
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
 
