--- a/installing-scientific-python-libraries-on-osx/index.html
+++ b/installing-scientific-python-libraries-on-osx/index.html
@@ -220,7 +220,7 @@ Qobj data =
     // make sure to use the post.id as an identifier, 
     //otherwise disqus will use the pages url per default, 
     //which might be problematic...
-    var disqus_identifier = '28,';
+    var disqus_identifier = '28';
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
 
