--- a/on-teaching-mathematics/index.html
+++ b/on-teaching-mathematics/index.html
@@ -170,7 +170,7 @@ http://www.ceremade.dauphine.fr/~msfr/articles/arnold/PRE_anglais.ps </p>
     // make sure to use the post.id as an identifier, 
     //otherwise disqus will use the pages url per default, 
     //which might be problematic...
-    var disqus_identifier = '40,';
+    var disqus_identifier = '40';
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
 
