--- a/piping-with-swift/index.html
+++ b/piping-with-swift/index.html
@@ -167,7 +167,7 @@ func |&gt; &lt;L,R&gt;(left: L, right: L -&gt; R) -&gt; R {
     // make sure to use the post.id as an identifier, 
     //otherwise disqus will use the pages url per default, 
     //which might be problematic...
-    var disqus_identifier = '34,';
+    var disqus_identifier = '34';
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
 
