--- a/shasumming-files-in-ruby/index.html
+++ b/shasumming-files-in-ruby/index.html
@@ -128,7 +128,7 @@ d.hexdigest
     // make sure to use the post.id as an identifier, 
     //otherwise disqus will use the pages url per default, 
     //which might be problematic...
-    var disqus_identifier = '20,';
+    var disqus_identifier = '20';
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
 
