--- a/the-day-we-fight-back/index.html
+++ b/the-day-we-fight-back/index.html
@@ -268,7 +268,7 @@ Decoded</a></li>
     // make sure to use the post.id as an identifier, 
     //otherwise disqus will use the pages url per default, 
     //which might be problematic...
-    var disqus_identifier = '26,';
+    var disqus_identifier = '26';
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
 
