--- a/the-pale-blue-dot-from-mars-and-more/index.html
+++ b/the-pale-blue-dot-from-mars-and-more/index.html
@@ -108,7 +108,7 @@
     // make sure to use the post.id as an identifier, 
     //otherwise disqus will use the pages url per default, 
     //which might be problematic...
-    var disqus_identifier = '25,';
+    var disqus_identifier = '25';
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
 
