--- a/thought-on-the-differential-logistic-equation/index.html
+++ b/thought-on-the-differential-logistic-equation/index.html
@@ -147,7 +147,7 @@ $$</p>
     // make sure to use the post.id as an identifier, 
     //otherwise disqus will use the pages url per default, 
     //which might be problematic...
-    var disqus_identifier = '17,';
+    var disqus_identifier = '17';
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
 
