--- a/update-script-explained/index.html
+++ b/update-script-explained/index.html
@@ -197,7 +197,7 @@ sh update-ghost.sh
     // make sure to use the post.id as an identifier, 
     //otherwise disqus will use the pages url per default, 
     //which might be problematic...
-    var disqus_identifier = '10,';
+    var disqus_identifier = '10';
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
 
