--- a/a-great-workaround-for-targeting-links-in-ghost/index.html
+++ b/a-great-workaround-for-targeting-links-in-ghost/index.html
@@ -116,7 +116,7 @@
     // make sure to use the post.id as an identifier, 
     //otherwise disqus will use the pages url per default, 
     //which might be problematic...
-    var disqus_identifier = '13,';
+    var disqus_identifier = '13';
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
 
