--- a/a-simple-script-to-update-ghost/index.html
+++ b/a-simple-script-to-update-ghost/index.html
@@ -101,7 +101,7 @@
     // make sure to use the post.id as an identifier, 
     //otherwise disqus will use the pages url per default, 
     //which might be problematic...
-    var disqus_identifier = '9,';
+    var disqus_identifier = '9';
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
 
