--- a/again-on-zsh/index.html
+++ b/again-on-zsh/index.html
@@ -227,7 +227,7 @@ zstyle &#39;:prezto:load&#39; pmodule \
     // make sure to use the post.id as an identifier, 
     //otherwise disqus will use the pages url per default, 
     //which might be problematic...
-    var disqus_identifier = '21,';
+    var disqus_identifier = '21';
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
 
