--- a/convert-djvu-files-to-a-decently-small-pdf/index.html
+++ b/convert-djvu-files-to-a-decently-small-pdf/index.html
@@ -115,7 +115,7 @@
     // make sure to use the post.id as an identifier, 
     //otherwise disqus will use the pages url per default, 
     //which might be problematic...
-    var disqus_identifier = '22,';
+    var disqus_identifier = '22';
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
 
