--- a/implementing-either-type-in-swift/index.html
+++ b/implementing-either-type-in-swift/index.html
@@ -160,7 +160,7 @@ var badDivision = safeDiv(2,0)
     // make sure to use the post.id as an identifier, 
     //otherwise disqus will use the pages url per default, 
     //which might be problematic...
-    var disqus_identifier = '33,';
+    var disqus_identifier = '33';
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
 
