--- a/move-to-ghc-7-8-2-on-macosx/index.html
+++ b/move-to-ghc-7-8-2-on-macosx/index.html
@@ -192,7 +192,7 @@ setLambdabotHome &quot;/Users/marcelloseri/.cabal/bin&quot;
     // make sure to use the post.id as an identifier, 
     //otherwise disqus will use the pages url per default, 
     //which might be problematic...
-    var disqus_identifier = '31,';
+    var disqus_identifier = '31';
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
 
