--- a/socks-proxy-with-ssh/index.html
+++ b/socks-proxy-with-ssh/index.html
@@ -111,7 +111,7 @@
     // make sure to use the post.id as an identifier, 
     //otherwise disqus will use the pages url per default, 
     //which might be problematic...
-    var disqus_identifier = '38,';
+    var disqus_identifier = '38';
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
 
