--- a/what-problems-to-solve-by-richard-feynman/index.html
+++ b/what-problems-to-solve-by-richard-feynman/index.html
@@ -146,7 +146,7 @@ ideals are.</p>
     // make sure to use the post.id as an identifier, 
     //otherwise disqus will use the pages url per default, 
     //which might be problematic...
-    var disqus_identifier = '39,';
+    var disqus_identifier = '39';
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
 
