--- a/why-privacy-matters-by-glenn-greenwald/index.html
+++ b/why-privacy-matters-by-glenn-greenwald/index.html
@@ -102,7 +102,7 @@
     // make sure to use the post.id as an identifier, 
     //otherwise disqus will use the pages url per default, 
     //which might be problematic...
-    var disqus_identifier = '37,';
+    var disqus_identifier = '37';
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
 
