deploy: mseri/blog@befcc8d30488277911dd0b8dcd84181dc3005c50

--- a/links-from-hm/index.html
+++ b/links-from-hm/index.html
@@ -92,7 +92,7 @@ To avoid losing it in the guts of our teaching CMS, I leave it here for posterit
 <li>Video course on <a href="https://youtube.com/playlist?list=PL5EH0ZJ7V0jV7kMYvPcZ7F9oaf_YAlfbI">asymptotics and perturbation methods</a> by Strogatz</li>
 <li>Very informative video: <a href="https://www.youtube.com/watch?v=wZBEFmkmogs">Steven Strogatz: ask me anything</a></li>
 <li>Shameless AD: <a href=https://www.few.vu.nl/~trt800/ddtg/serinotes.pdf>Micro Lectures</a> on sub-Riemannian Geometry <a href="https://www.youtube.com/watch?v=RqM9_PzO5-M">Part 1</a> and <a href="https://www.youtube.com/watch?v=VDR0jUMCHsc">Part 2</a>, complemented by this talk on <a href="https://www.youtube.com/watch?v=Rp5pHUjSRw8">sub-Riemannian billiards</a></li>
-<li><a href=http://cleonis.nl/physics/phys256/energy_position_equation.php>Interactive demonstrations on the stationary action (and more) principle by Cleon Teunissen</a></li>
+<li><a href=http://cleonis.nl/physics/phys256/energy_position_equation.php>Interactive demonstrations on the stationary action principle by Cleon Teunissen</a>, and there are plenty more if you navigate through the site</li>
 </ul>
 <h2 id=further-material-for-the-projects-and-extra-lectures>Further material for the projects and extra lectures</h2>
 <p>In addition to the material added above (lots of it is not open access unfortunately).</p>
