deploy: mseri/blog@12d106f4bef6365e0a732b33e48c1f56384e2ed7

--- a/edward-snowden-interviewed-by-the-ndr-channel/index.html
+++ b/edward-snowden-interviewed-by-the-ndr-channel/index.html
@@ -59,7 +59,7 @@ Feb 5, 2014
 <p>You can keep updated on the leaks at one of the following links:</p>
 <ul>
 <li><a href=https://www.theguardian.com/world/the-nsa-files>The NSA files decoded on The Guardian</a></li>
-<li><a href=https://www.ub.uio.no/fag/informatikk-matematikk/informatikk/faglig/bibliografier/no21984.html>Global surveillance page by the University of Oslo</a></li>
+<li><a href=https://web.archive.org/web/20210526004004/https://www.ub.uio.no/fag/naturvitenskap-teknologi/informatikk/faglig/bibliografier/no21984.html>Global surveillance page by the University of Oslo</a></li>
 <li><a href=https://www.theguardian.com/world/2013/oct/03/edward-snowden-files-john-lanchester>The Snowden files: why the British public should be worried about GCHQ on The Guardian</a></li>
 <li><a href=https://verdict.justia.com/2013/07/17/the-promise-of-may-the-betrayal-of-june-and-the-larger-lesson-of-manning-and-snowden>The Promise of May, the Betrayal of June, and the Larger Lesson of Manning and Snowden on Verdict</a></li>
 <li><a href=https://www.theguardian.com/world/edward-snowden>Edward Snowden page on The Guardian</a></li>
