--- a/ghost-0-4-0-is-out/index.html
+++ b/ghost-0-4-0-is-out/index.html
@@ -50,7 +50,7 @@ Jan 13, 2014
 </header>
 <div class=post-content>
 <p>and the ghost update script has been updated to mirror the changes in the update procedure. You can find it here: <a href=https://gist.github.com/mseri/7059958>https://gist.github.com/mseri/7059958</a></p>
-<p>Updates for <a href=https://gumroad.com/l/purity>purity</a> to support all the new features are going to be released very soon.</p>
+<p>Updates for <code>purity</code> to support all the new features are going to be released very soon.</p>
 <p>As you can read from <a href=https://blog.ghost.org/ghost-0-4/>the official announcement</a>, the new release of Ghost comes with a huge amount of features and updates:</p>
 <ul>
 <li><strong>Static pages</strong>. You can now toggle any post to be a &ldquo;page&rdquo; from within your post settings menu. This will remove it from your post feed. About / Contact / Terms galore!</li>
