--- a/ghost-on-amazon-ec2-without-using-sudo/index.html
+++ b/ghost-on-amazon-ec2-without-using-sudo/index.html
@@ -51,7 +51,7 @@ Sep 24, 2013
 <p>For the sake of completeness I link some of them here:</p>
 <ul>
 <li><a href=https://blog.igbuend.com/dude-looks-like-a-ghost/>Dude looks like a ghost</a></li>
-<li><a href=https://nls.io/setup-ghost-with-nginx-on-debian/>Setup Ghost with nginx on Debian</a></li>
+<li><a href=https://web.archive.org/web/20131021214247/https://nls.io/setup-ghost-with-nginx-on-debian/>Setup Ghost with nginx on Debian</a></li>
 <li><a href=https://github.com/d5/docs/wiki/Installing-Node.js-on-Amazon-EC2>Installing Node.js on Amazon EC2</a></li>
 <li><a href=https://www.howtoinstallghost.com/how-to-host-ghost-on-a-nginx-subdomain/>How to Host Ghost on a Nginx Subdomain</a></li>
 </ul>
