--- a/installing-scientific-python-3-libraries-on-osx-and-julia-with-ijulia/index.html
+++ b/installing-scientific-python-3-libraries-on-osx-and-julia-with-ijulia/index.html
@@ -87,7 +87,7 @@ Apr 15, 2014
 <div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-sh data-lang=sh>    ipython3 notebook --profile julia
 </code></pre></div><p>and eventually make an alias out of it if you plan to use it often. A simple IJulia tutorial from the MIT can be found <a href=https://nbviewer.ipython.org/url/jdj.mit.edu/~stevenj/IJulia%20Preview.ipynb>on IPython website</a>.</p>
 <p>Additionally you may want to install <code>PyPlot</code> and <code>Winston</code> for plots. You can find a [list of available packages and their description on Julia website](<a href=https://docs.julialang.org/en/latest/packages/packagelist/%22>https://docs.julialang.org/en/latest/packages/packagelist/"</a> target=_&ldquo;blank) or with a search on google or on <a href=https://www.github.com>GitHub</a>.</p>
-<p>To understand how to make complex plots with matplotlib using julia&rsquo;s pyplot interface I&rsquo;ve found the following post extremely useful: <a href=https://iaindunning.com/2014/subs-battleships.html>Naval Warfare with JuMP + Julia</a>.</p>
+<p>To understand how to make complex plots with matplotlib using julia&rsquo;s pyplot interface I&rsquo;ve found the following post extremely useful: <a href=https://web.archive.org/web/20150228013248/https://iaindunning.com/2014/subs-battleships.html>Naval Warfare with JuMP + Julia</a>.</p>
 </div>
 <div class=post-footer>
 <script src=https://utteranc.es/client.js repo=mseri/mseri.github.io issue-term=pathname label=✨💬✨ theme=photon-dark crossorigin=anonymous async></script>
