--- a/on-teaching-mathematics/index.html
+++ b/on-teaching-mathematics/index.html
@@ -124,8 +124,7 @@ Feb 6, 2015
 <p>Translated by A.V. GORYUNOV
 Published in: Uspekhi Mat. Nauk 53 (1998), no. 1, 229—234;
 English translation: Russian Math. Surveys 53 (1998), no. 1, 229—236.
-Source of this text:
-<a href=https://www.ceremade.dauphine.fr/~msfr/articles/arnold/PRE_anglais.ps>https://www.ceremade.dauphine.fr/~msfr/articles/arnold/PRE_anglais.ps</a></p>
+<a href=https://web.archive.org/web/20051013143411/https://www.ceremade.dauphine.fr/~msfr/articles/arnold/PRE_anglais.ps>Source</a></p>
 </div>
 <div class=post-footer>
 <script src=https://utteranc.es/client.js repo=mseri/mseri.github.io issue-term=pathname label=✨💬✨ theme=photon-dark crossorigin=anonymous async></script>
