--- a/save-your-battery-life/index.html
+++ b/save-your-battery-life/index.html
@@ -60,13 +60,13 @@ Sep 29, 2013
 <li>It is better to charge the battery with the device turned off</li>
 <li>If you need to store the battery without using it for a period of time, discharge to 40-50%</li>
 </ul>
-<p>To remember to make a full discharge once a month Apple prepared a <a href=https://www.apple.com/batteries/images/notebook_icalreminder.ics>downloadable calendar event</a>. Just open it in your favourite calendar application and it will set up a monthly reminder.</p>
+<p>To remember to make a full discharge once a month Apple prepared a <a href=https://web.archive.org/web/20060726001125/http://www.apple.com/batteries/images/notebook_icalreminder.ics>downloadable calendar event</a>. Just open it in your favourite calendar application and it will set up a monthly reminder.</p>
 <p>Hopefully these tips should help you to extend the longevity and the capacity of your li-ion batteries, on the other hand it seems pretty clear that these best practices are hard to follow.</p>
 <p>####Sources</p>
 <p>For additional informations have a look at the following links:</p>
 <ul>
-<li>Battery University: <a href=https://batteryuniversity.com/learn/article/charging_lithium_ion_batteries>Charging Li-Ion Batteries</a>
-, <a href=https://batteryuniversity.com/learn/article/how_to_prolong_lithium_based_batteries>How to Prolong Lithium Based Batteries</a></li>
+<li>Battery University: <a href=https://web.archive.org/web/20210518183520/https://batteryuniversity.com/learn/article/charging_lithium_ion_batteries>Charging Li-Ion Batteries</a>
+, <a href=https://web.archive.org/web/20210811190613/https://batteryuniversity.com/article/bu-808-how-to-prolong-lithium-based-batteries>How to Prolong Lithium Based Batteries</a></li>
 <li>Gigaom: <a href=https://gigaom.com/2013/06/22/extend-the-battery-life-of-your-macbook-no-matter-how-old-it-is/>Extend the battery life of your MacBook, no matter how old it is</a></li>
 <li>Fergyblog: <a href=https://fer.gy/2012/04/15/how-to-prolong-lithium-ion-battery-life/>How to Prolong Lithium-Ion Battery Life</a></li>
 <li>Ars Technica: <a href=https://arstechnica.com/gadgets/2011/02/ask-ars-what-is-the-best-way-to-use-an-li-ion-battery/>What is the Best Way to Use a Li-Ion Battery?</a></li>
@@ -74,7 +74,7 @@ Sep 29, 2013
 </ul>
 <hr>
 <h3 id=update>Update</h3>
-<p>The small program I promised above is ready. You can check the source code in <a href=https://github.com/mseri/saveBattery>its github repository</a> or download it packaged as an app from <a href=https://dl.dropboxusercontent.com/u/663035/batteryLifeExtender.zip>here</a>.</p>
+<p>The small program I promised above is ready. You can check the source code in <a href=https://github.com/mseri/saveBattery>its github repository</a> or download it packaged as an app from <a href="https://www.dropbox.com/s/tqmws1rrgsno1bj/batteryLifeExtender.zip?dl=0">here</a>.</p>
 <p>It&rsquo;s just a status bar application for MacOSX 10.8+ that fires notifications to inform you when to plug or unplug the battery.</p>
 <hr>
 <h3 id=update-2>Update 2</h3>
