--- a/the-day-we-fight-back/index.html
+++ b/the-day-we-fight-back/index.html
@@ -67,8 +67,8 @@ Feb 11, 2014
 </li>
 </ul>
 <p>Since few months we had the confirmation that even the most important defender of human rights and democracy is daily violating them unpunished.</p>
-<p>The Day We Fight Back’s main international action is to <a href=https://en.necessaryandproportionate.org/text>sign and promote the 13 Principles</a> that <strong>outline how communications surveillance can be conducted consistent with human rights and serve as a model for surveillance reform</strong>. Over the past year, nearly 370 organizations have come together to support it. Today is time for us to give it a greater meaning.</p>
-<p>I want to give you a summary of these principles, <em>part of the official text has been deleted or rewritten by me to summarize it</em>: please refer to the <a href=https://en.necessaryandproportionate.org/text>13 Principles official page</a> to read the official full text.</p>
+<p>The Day We Fight Back’s main international action is to <a href=https://web.archive.org/web/20180304042809/https://necessaryandproportionate.org/principles>sign and promote the 13 Principles</a> that <strong>outline how communications surveillance can be conducted consistent with human rights and serve as a model for surveillance reform</strong>. Over the past year, nearly 370 organizations have come together to support it. Today is time for us to give it a greater meaning.</p>
+<p>I want to give you a summary of these principles, <em>part of the official text has been deleted or rewritten by me to summarize it</em>: please refer to the <a href=https://web.archive.org/web/20180304042809/https://necessaryandproportionate.org/principles>13 Principles official page</a> to read the official full text.</p>
 <ol>
 <li>
 <p><strong>LEGALITY</strong><br>
@@ -89,7 +89,7 @@ Any instance of communications surveillance authorised by law must be appropriat
 <li>
 <p><strong>PROPORTIONALITY</strong><br>
 Communications surveillance should be regarded as a highly intrusive act that interferes with the rights to privacy and freedom of opinion and expression, threatening the foundations of a democratic society. Decisions about communications surveillance must be made by weighing the benefit sought to be achieved against the harm that would be caused to the individual’s rights and to other competing interests, and should involve a consideration of the sensitivity of the information and the severity of the infringement on the right to privacy.
-<a href=https://en.necessaryandproportionate.org/text#principle_5>This is a very important point, please have a look at the full text</a></p>
+<a href=https://web.archive.org/web/20180304042809/https://necessaryandproportionate.org/principles#principle_5>This is a very important point, please have a look at the full text</a></p>
 </li>
 <li>
 <p><strong>COMPETENT JUDICIAL AUTHORITY</strong><br>
@@ -213,7 +213,7 @@ Wikipedia</a></li>
 <li><a href=https://eff.org/nsa-spying>NSA Spaying - EFF.org</a></li>
 <li><a href=https://www.theguardian.com/world/interactive/2013/nov/01/snowden-nsa-files-surveillance-revelations-decoded>Guardian’s NSA Files
 Decoded</a></li>
-<li><a href=https://www.ub.uio.no/fag/informatikk-matematikk/informatikk/faglig/bibliografier/no21984.html>Global surveillance page by the University of Oslo</a></li>
+<li><a href=https://web.archive.org/web/20210526004004/https://www.ub.uio.no/fag/naturvitenskap-teknologi/informatikk/faglig/bibliografier/no21984.html>Global surveillance page by the University of Oslo</a></li>
 </ul>
 <p><strong>And if you think that they have the right to do it, you should definitely read this <a href=https://www.eff.org/deeplinks/2013/11/busting-eight-common-excuses-nsa-surveillance>post of the EFF: 8 Common Excuses for NSA Surveillance - and How to Bust Them</a>.</strong></p>
 <p>We claim that we are civilised, we praise ourselves with the freedom of speech, and we stand with the flag of fighters for the human rights. But we don&rsquo;t deserve it. We have now the chance of changing things before it&rsquo;s too late, let&rsquo;s at least try to do it!</p>
