--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
 <h1>A fractal spectrum of tales</h1>
 <ul class=posts-list>
 <li class=posts-list-item>
+<a class=posts-list-item-title href=https://www.mseri.me/micro-course-on-sr-geometry/>A Micro Course on Sub-Riemannian Geometry</a>
+<span class=posts-list-item-description>
+<span>Last year I had the opportunity to give the first talk at the The Dutch Differential Topology & Geometry seminar (DDT&G). This was a 3 hour long event in which I had the chance to give a high-level introduction to sub-Riemannian geometry and present some interesting results and open questions partly related to my research.
+In the first part of the seminar I introduced what are sub-Riemannian structures, where do they come from and what are some of the major properties and open questions, using some famous examples to drive the discussion.</span><br>
+<span><svg xmlns="https://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-clock"><title>clock</title><circle cx="12" cy="12" r="10"/><polyline points="12 6 12 12 16 14"/></svg> 2 min read -
+Oct 21, 2021
+</span>
+</span>
+</li>
+<li class=posts-list-item>
 <a class=posts-list-item-title href=https://www.mseri.me/four-golden-lessons/>Four Golden Lessons</a>
 <span class=posts-list-item-description>
 <span>The recent death of Steven Weinberg, winner of the Nobel prize in Physics and one of the most brilliant scientists of our times, made many people look back to his incredible production. In addition to some incredible eulogies, this has allowed a lot of little gems to resurface. Here I want to share one of them.
@@ -117,17 +127,6 @@ Apr 20, 2020
 <span>Introduction Category theory is an abstrac mathematical framework that had a huge influence on pure functional programming design patterns. The abstractions and laws that come bundled with the mathematical concepts allow us to write safer and composable interfaces, very prone to equational reasoning, at the price of a steeper learning curve. If you attempt to write some relatively modern Haskell code, you will inevitably have to deal with Monoids, Functions, Monads, Lenses and whatnot typeclassopedia.</span><br>
 <span><svg xmlns="https://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-clock"><title>clock</title><circle cx="12" cy="12" r="10"/><polyline points="12 6 12 12 16 14"/></svg> 34 min read -
 Jun 4, 2017
-</span>
-</span>
-</li>
-<li class=posts-list-item>
-<a class=posts-list-item-title href=https://www.mseri.me/on-teaching-mathematics/>On teaching mathematics - By V. I. Arnold</a>
-<span class=posts-list-item-description>
-<span>This is an extended text of the address at the discussion on teaching of mathematics in Palais de Découverte in Paris on 7 March 1997.
-Mathematics is a part of physics. Physics is an experimental science, a part of natural science. Mathematics is the part of physics where experiments are cheap.
-The Jacobi identity (which forces the heights of a triangle to cross at one point) is an experimental fact in the same way as that the Earth is round (that is, homeomorphic to a ball).</span><br>
-<span><svg xmlns="https://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-clock"><title>clock</title><circle cx="12" cy="12" r="10"/><polyline points="12 6 12 12 16 14"/></svg> 19 min read -
-Feb 6, 2015
 </span>
 </span>
 </li>
