deploy: mseri/blog@0aeb8567615edbe99caccc65d98c42eccb08aa7b

--- a/micro-course-on-sr-geometry/index.html
+++ b/micro-course-on-sr-geometry/index.html
@@ -58,6 +58,11 @@ For this part of the talk I assumed also some knowledge of functional analysis a
 <p>My slides are also <a href=https://few.vu.nl/~trt800/ddtg/serinotes.pdf>available for download</a> but, beware, they are big (99Mb) and handwritten&mldr;</p>
 <p>Keep an eye out for the DDT&G, they have a lot of very interesting micro courses already, and more are coming!</p>
 <p>I hope you enjoy. I should have posted them here much earlier.</p>
+<hr>
+<p>I recently gave one more talk on this subject, giving more emphasis the connections to the physics of magnetic systems. I link it here for future reference:</p>
+<div style=position:relative;padding-bottom:56.25%;height:0;overflow:hidden>
+<iframe src=https://www.youtube-nocookie.com/embed/9nut8RoIF3M style=position:absolute;top:0;left:0;width:100%;height:100%;border:0 allowfullscreen title="YouTube Video"></iframe>
+</div>
 </div>
 <div class=post-footer>
 <script src=https://utteranc.es/client.js repo=mseri/mseri.github.io issue-term=pathname label=✨💬✨ theme=photon-dark crossorigin=anonymous async></script>
