deploy: mseri/blog@30ef1437de6c52a74144a2d0e63b093d38826d97

--- a/links-from-hm/index.html
+++ b/links-from-hm/index.html
@@ -75,6 +75,7 @@ To avoid losing it in the guts of our teaching CMS, I leave it here for posterit
 <h2 id=extra-material-on-similar-topics>Extra material on similar topics</h2>
 <p>Some courses that touch on similar concepts, often from different point of views:</p>
 <ul>
+<li>Lecture Notes: <a href=https://unishare.nl/index.php/s/eAYsg7ADKQXa2Wy/download/A%20Knauf%20-%20Classical%20Mechanics%20and%20Transport.pdf>Classical Mechanics of Transport</a>, part of 4 extremely interesting mini-courses for <a href=https://www.lorentzcenter.nl/learning-from-insulators-new-trends-in-the-study-of-conductivity-of-metals.html>a recent conference at the Lorentz Center in Leiden (NL)</a></li>
 <li>Video course: <a href=https://www.fau.tv/course/id/242>Lectures on the Geometry of Theoretical Physics</a> by Schiller</li>
 <li>Video course: <a href="https://www.youtube.com/watch?v=pyX8kQ-JzHI">Modern Physics: Classical Mechanics</a> by Susskind (part of his big program: The Theoretical Minimum)</li>
 <li>Book (open access): <a href=https://mitpress.mit.edu/sites/default/files/titles/content/sicm_edition_2/book.html>Sussman and Wisdom, Structure and interpretation of classical mechanics</a>. Its objective is to make everything explicitly computable at each point which means it can treat a different part of the material but from a unique perspective, very fun and informative!</li>
